welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:3: error: Invalid literal number
for(compteur<- 1to 4 )
               ^MethodsDogHouse:7: error: ')' expected but '}' found.
}
^