welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def dogHouse() {
for(compteur<- 1to 4 )
avance()
avance()
gauche()
}

